--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,12 @@
 .logoImage {
     text-align: left;
-    width: 150px;
+    width: 110px;
     height: 100px;
+    
+}
+
+.nav-item {
+    padding: 15px;
+    font-weight: 15px;
 }
 
