--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -6,15 +6,11 @@
    
 }
 
-div.mainPhoto {
-    background: cover;
-    background: no-repeat;
-    background-position: center;
-    padding: 400px;
-    height: 100%;
-    width: 100%;
+/* .backgroundText {
+    height: 100px;
+    width: 100px;
     
-}
+} */
 
 
 .roomsButton {
@@ -40,4 +36,20 @@ div.mainPhoto {
     font-size: 70px;
     text-decoration:underline;
     position: absolute;
+}
+
+
+.backgroundPhoto {
+    background-color: rgb(0, 0, 0);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+    background-position: center top;
+    background-size: cover;
+    aspect-ratio: 16/9;
+   
+}
+
+body {
+    background-color: bisque;
 }
