--- a/src/components/reservation/Reservation.css
+++ b/src/components/reservation/Reservation.css
@@ -14,6 +14,42 @@ label {
     margin-left: 10px;
   }
 
-  /* button {
-    flex: content;
-  } */
+  .reservationButton {
+    border-radius: 5px;
+    transition: 0.6s;
+    width: 100px;
+    height: 45px;
+  
+  
+    
+
+  }
+
+  .reservationButton:hover {
+    background-color: white;
+    color: #0d6efd;
+    border: 0.5px solid black;
+  }
+
+  .formReservation {
+    
+    margin: 100px;
+    width: 1000px;
+    position: center;
+    
+  }
+
+  .infoDate {
+    display: inline;
+    margin-right: 10px;
+  }
+
+  .guestsNr {
+    display: inline;
+    margin-right: 10px;
+  }
+
+  .inputInfo {
+    background-color: wheat;
+    border: 1px solid orange;
+  }
