--- a/src/components/rooms/Rooms.css
+++ b/src/components/rooms/Rooms.css
@@ -5,8 +5,14 @@
 }
 
 .card-body {
-    width: 370px;
-    height: 190px;
+    width: 100%;
+    height: 220px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    
+
     
 }
 
@@ -23,12 +29,18 @@
     margin-top: 20px;
     margin-bottom: 20px;
     
+    
 }
 
 .card {
     margin-bottom: 20px;
     margin-top: 20px;
     border: none;
+    background-color: bisque;
+}
+
+.roomBtn {
+    margin-top: auto;
 }
 
 
