--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -6,29 +6,45 @@
    
 }
 
-/* .backgroundText {
-    height: 100px;
-    width: 100px;
-    
-} */
+.welcome {
+    padding: 90px;
+    color: black;
+    text-shadow: 10px 10px 15px rgb(255, 255, 255);
+}
+
+
+
+.star {
+    color: yellow;
+    font-size: 80px;
+    text-shadow: 2px 2px 5px rgb(255, 255, 255);
+
+
+}
+
+
 
 
 .roomsButton {
-    background-color: rgb(0, 0, 246);
+    background-color: black;
     transition-duration: 0.8s;
-    border: 1px solid rgb(0, 0, 0);
-    color: black;
+    border: 1px solid rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     border-radius: 13px;
     font-size: 20px;
-    font-weight: 50px;
+    height: 50px;
+    box-shadow: inset 0 0 5px yellow;
+   
+    
     
 }
 
 .roomsButton:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;
-    border: 1px solid #000000;
+    background-color: yellow;
+    color: rgb(0, 0, 0);
+    border: 1px solid #ffffff;
     border-radius: 13px;
+    box-shadow: inset 0 0 10px white;
 }
 
 .title {
@@ -47,9 +63,35 @@
     background-position: center top;
     background-size: cover;
     aspect-ratio: 16/9;
+    border-top: 1px solid white;
    
 }
 
 body {
-    background-color: bisque;
+    background-color: rgb(255, 255, 255);
 }
+
+.row, .col {
+    margin: 20px;
+}
+
+
+.presentationMessage {
+    margin-top: 20px;
+}
+
+.presentation {
+    border-top: 1px solid rgb(0, 0, 0);
+}
+
+.col1, .col2 {
+    border-left: 2px solid black;
+}
+
+.col3, .col4 {
+    border-top: 2px solid black;
+    padding-top: 15px;
+}
+
+
+
