--- a/src/components/reservation/Reservation.css
+++ b/src/components/reservation/Reservation.css
@@ -35,7 +35,11 @@ label {
     
     margin: 100px;
     width: 1000px;
+    height: 150px;
+    padding-top: 30px;
+    padding-bottom: 50px;
     position: center;
+    background-color:lightblue;
     
   }
 
@@ -50,6 +54,10 @@ label {
   }
 
   .inputInfo {
-    background-color: wheat;
-    border: 1px solid orange;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid rgb(255, 255, 255);
+    color: white;
+    height: 30px;
+    width: 150px;
+    margin-left: 10px;
   }
