--- a/src/components/rooms/Rooms.css
+++ b/src/components/rooms/Rooms.css
@@ -1,6 +1,11 @@
 .card-img-top {
    width: 355px;
-   height: 260px;  
+   height: 260px;
+   border-radius: 30px;
+   padding: 10px;
+   
+
+   
    
 }
 
@@ -16,18 +21,14 @@
     
 }
 
- .btn {
-    transition-duration: 0.4s;  
-}
 
-.btn:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;    
-} 
+
 
 .container {
     margin-top: 20px;
     margin-bottom: 20px;
+
+    
     
     
 }
@@ -36,11 +37,31 @@
     margin-bottom: 20px;
     margin-top: 20px;
     border: none;
-    background-color: bisque;
+    background-color: rgb(255, 255, 255);
 }
 
 .roomBtn {
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    -webkit-box-shadow: 21px 21px 32px 14px rgba(0,0,0,0.6); 
+box-shadow: 21px 21px 32px 14px rgba(0,0,0,0.6);
+    color: black;
     margin-top: auto;
+    transition-duration: 0.4s; 
+    font-weight: bold;
+    height: 40px;
 }
+
+.btn:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255); 
+    -webkit-box-shadow: -7px -7px 32px 14px rgba(0,0,0,0.6); 
+    box-shadow: -7px -7px 32px 14px rgba(0,0,0,0.6);
+    height: 40px;
+    border: 1px solid black;
+} 
+
+
 
 
