--- a/src/components/reservation/Reservation.css
+++ b/src/components/reservation/Reservation.css
@@ -17,7 +17,7 @@ label {
     border: 1px solid black;
   }
 
-  .reservationButton {
+  .reservationButton, .reservationButton:focus {
     border-radius: 5px;
     transition: 0.6s;
     width: 100px;
@@ -26,6 +26,7 @@ label {
     margin-bottom: 50px;
     background-color: black;
     color: white;
+    border-color: black;
     
   
   
