--- a/src/components/rooms/Rooms.css
+++ b/src/components/rooms/Rooms.css
@@ -1,3 +1,7 @@
+.roomsTitle {
+    margin-top: 20px;
+}
+
 .card-img-top {
    width: 355px;
    height: 260px;
@@ -11,7 +15,7 @@
 
 .card-body {
     width: 100%;
-    height: 220px;
+    height: 240px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -45,7 +49,7 @@
     border: 1px solid black;
     border-radius: 5px;
     -webkit-box-shadow: 21px 21px 32px 14px rgba(0,0,0,0.6); 
-box-shadow: 21px 21px 32px 14px rgba(0,0,0,0.6);
+    box-shadow: 21px 21px 32px 14px rgba(0,0,0,0.6);
     color: black;
     margin-top: auto;
     transition-duration: 0.4s; 
@@ -62,6 +66,6 @@ box-shadow: 21px 21px 32px 14px rgba(0,0,0,0.6);
     border: 1px solid black;
 } 
 
-
-
-
+ .parPrice {
+    margin-bottom: 30px;
+} 
