--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,6 +5,7 @@
     padding-top: 20px;
     font-weight: bold;
     border-top: 2px solid white ;
+    margin-top: 10px;
 }
 .container-footer {
     background-color: black;
